<resources>
    <string name="app_name">Discard</string>
    <string name="title_activity_things">Things</string>
    <string name="title_activity_register">Register</string>
    <string name="login_sub_url">login</string>
    <string name="register_sub_url">register</string>
    <string name="friend_list_sub_url">getFriendList</string>
    <string name="add_description_sub_url">addDescription</string>
    <string name="chat_sub_url">sendMessage</string>
    <string name="refresh_sub_url">getMessages</string>
    <string name="join_massive_conversation_sub_url">joinNewMassConversation</string>
    <string name ="email_field">email</string>
    <string name="username_field">name</string>
    <string name="username_reg_field">username</string>
    <string name="password_field">password</string>
    <string name="tap_here_to_continue">Tap Here to Continue</string>
    <string name="welcome">Welcome to Discard!</string>
    <string name="description">Be one of the first persons to ever experience a brand new way of communication, friend finding and social games.</string>
    <string name="enjoy">ENJOY!</string>
    <string name="test">TEST</string>
    <string name="ip">10.0.1.93</string>
    <string name="port">:8000</string>
    <string name="registration_completed">Registration completed successfully</string>
    <string name="registration_failed">Registration failed</string>
    <string name="my_profile">My Profile</string>
    <string name="add_friends">Add Friends</string>
    <string name="temp_chat">Temp chat</string>
    <string name="title_activity_set_description">SetDescriptionActivity</string>
    <string name="descriptionOrder">Tell us a few words about yourself</string>
    <string name="typeHere">Type Here</string>
    <string name="applyText">Apply</string>
    <string name="refresh">Refresh</string>
    <string name="title_activity_check_notifications">CheckNotificationsActivity</string>
    <string name="ask_for_login">Login to Your Account</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="register_button_text">Don\'t have an account? Register Now!</string>
    <string name="login_button_text">Sign in</string>
    <string name="processing_error">There was an error processing the request.</string>
    <string name="incorrect_login_data">Login failed. Incorrect data!</string>
    <string name="password_too_short">Password have to be longer than 5 characters!</string>
    <string name="incorrect_email">Email is incorrect!</string>
    <string name="description_set_error">There was a problem with your description.</string>
    <string name="friend_list_error">"Fetching friends list failed."</string>
    <string name="message_failure">Cannot send message!</string>
    <string name="refresh_failure">Cannot download messages!</string>
</resources>
